gallery page link

--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>TENCON 2019 | Call for Papers</title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-39379599-10');
+    </script>
 
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -106,6 +109,7 @@
                                         </ul>
                                     </li>
                                     <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li class="dropdown"><a href="#">Special Tracks</a>
                                         <ul>
                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -149,7 +153,8 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li><a href="index.html">Home</a></li> <!--##-->
+                                    <li><a href="index.html">Home</a></li>
+                                    <!--##-->
                                     <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
                                             <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -222,13 +227,14 @@
 
                             <p align="right">
                                 <font style="font-size:20px; color:#812767; font-weight:bold;"><a
-                                        href="tencon2019-cfp.pdf" class="url">DOWNLOAD: Call for Papers in PDF </a></font>
+                                        href="tencon2019-cfp.pdf" class="url">DOWNLOAD: Call for Papers in PDF </a>
+                                </font>
                             </p>
                         </div>
 
                         <p align="center">
                             <font size="4">SUBMISSION DEADLINE EXTENDED TO: 20-May-2019<br>
-                               SPECIAL SESSIONS PAPER SUBMISSION DEADLINE: 30-June -2019</font>
+                                SPECIAL SESSIONS PAPER SUBMISSION DEADLINE: 30-June -2019</font>
                         </p>
                         <br>
 
@@ -247,8 +253,9 @@
                                 href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html">http://www.ieee.org/conferences_events/conferences/publishing/templates.html</a>.
 
                             <br>
-<br>
-                            <p align="center"><a href="https://itekcmsonline.com/tencon19/" class="theme-btn btn-style-one" target="_blank">Submit Your Paper</a></p><br>
+                            <br>
+                            <p align="center"><a href="https://itekcmsonline.com/tencon19/"
+                                    class="theme-btn btn-style-one" target="_blank">Submit Your Paper</a></p><br>
                             <br />
 
                             We welcome submissions for TENCON's technical program in the following areas and not limited
@@ -459,7 +466,8 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                             <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                            <a class="expert-link" href="https://cecieee.org/devcom-walk-through/"
+                                target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
                             <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                                 style="font-weight: initial;">Research Publishing Services</a>
                         </div><!-- /.col-md-4 -->
