--- a/general_information.html
+++ b/general_information.html
@@ -4,14 +4,17 @@
  <head>
      <meta charset="utf-8">
      <title>TENCON 2019 | General Information</title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+     <script>
+         window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+         function gtag() {
+             dataLayer.push(arguments);
+         }
+         gtag('js', new Date());
+
+         gtag('config', 'UA-39379599-10');
+     </script>
 
      <!-- Stylesheets -->
      <link href="css/bootstrap.css" rel="stylesheet">
@@ -106,7 +109,7 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                     <li><a href="gallery.html">Gallery</a></li>
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -150,7 +153,8 @@
 
                              <div class="navbar-collapse collapse clearfix">
                                  <ul class="navigation clearfix">
-                                     <li><a href="index.html">Home</a></li> <!--##-->
+                                     <li><a href="index.html">Home</a></li>
+                                     <!--##-->
                                      <li class="dropdown"><a href="about.html">About</a>
                                          <ul>
                                              <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -218,34 +222,42 @@
                  </div>
                  <div class="row">
                      <div class="col-md-10">
-                            <p align="justify">In order to provide you the best and convenient accommodation, we have partnered
-                                    with The Great India Tour Company (GITC), a leading travel operator in India. We have requested
-                                    them to negotiate with nearby hotels and offer special rates for TENCON2019 delegates. You may
-                                    please visit: <a class="url" href="http://tencon2019.org/accommodation.html">http://tencon2019.org/accommodation.html</a>
-                                    and contact our travel partners GITC.<br><br>
-                                    You can also book airport/railway station transfers through them. As you must have probably
-                                    googled by now, Kerala is one of the must see destination for any tourist, and we encourage you
-                                    discuss with GITC to pin your trip, avail the best suggestions as well as rates. <br>
-                                    Still, if you need anything more, you are always welcome to directly contact us at <br><br>
-                                    Email:
-                                    <a class="url" href="mailto:nandans@ieee.org"> nandans@ieee.org</a> / <a class="url" href="mailto: kbijuna@gmail.com"> kbijuna@gmail.com</a>,
-                                    <br> Tel: <a class="url" href="tel:+919446189453">+91 94461 89453</a> /<a class="url" href="tel:+919895163961">+91 98951 63961</a>. <br>We feel really privileged to host you.
-           
-                                </p>
+                         <p align="justify">In order to provide you the best and convenient accommodation, we have
+                             partnered
+                             with The Great India Tour Company (GITC), a leading travel operator in India. We have
+                             requested
+                             them to negotiate with nearby hotels and offer special rates for TENCON2019 delegates. You
+                             may
+                             please visit: <a class="url"
+                                 href="http://tencon2019.org/accommodation.html">http://tencon2019.org/accommodation.html</a>
+                             and contact our travel partners GITC.<br><br>
+                             You can also book airport/railway station transfers through them. As you must have probably
+                             googled by now, Kerala is one of the must see destination for any tourist, and we encourage
+                             you
+                             discuss with GITC to pin your trip, avail the best suggestions as well as rates. <br>
+                             Still, if you need anything more, you are always welcome to directly contact us at <br><br>
+                             Email:
+                             <a class="url" href="mailto:nandans@ieee.org"> nandans@ieee.org</a> / <a class="url"
+                                 href="mailto: kbijuna@gmail.com"> kbijuna@gmail.com</a>,
+                             <br> Tel: <a class="url" href="tel:+919446189453">+91 94461 89453</a> /<a class="url"
+                                 href="tel:+919895163961">+91 98951 63961</a>. <br>We feel really privileged to host
+                             you.
+
+                         </p>
                      </div>
                  </div>
 
-                    
-                     <br><br>
-                     <br><br>
-                     <br><br>
 
-                 </div>
-
-
-
+                 <br><br>
+                 <br><br>
+                 <br><br>
 
              </div>
+
+
+
+
+     </div>
      </div>
      </section>
 
@@ -260,7 +272,8 @@
                  <div class="row">
                      <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                          <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                         <a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom
+                             CEC</a>&nbsp;&&nbsp;
                          <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                              style="font-weight: initial;">Research Publishing Services</a>
                      </div><!-- /.col-md-4 -->
