--- a/inaugural-program.html
+++ b/inaugural-program.html
@@ -55,7 +55,6 @@
          table tr:nth-child(even) td {
              background: #eee;
          }
-
      </style>
      <div class="page-wrapper">
 
@@ -130,6 +129,7 @@
 
                                          </ul>
                                      </li>
+                                     <li><a href="gallery.html">Gallery</a></li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
@@ -289,8 +289,8 @@
                                              <td>10:35 AM</td>
                                              <td>Inaugural Address<br>
 
-                                               <b>Shri. Arif Mohammad Khan</b><br>
-                                                  <i>Hon. Governor of Kerala</i></td>
+                                                 <b>Shri. Arif Mohammad Khan</b><br>
+                                                 <i>Hon. Governor of Kerala</i></td>
                                          </tr>
                                          <tr>
                                              <td>10:55 AM</td>
