--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                                     </li>
                                     <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li class="dropdown"><a href="#">Special Tracks</a>
                                         <ul>
                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -306,13 +306,14 @@
                     <img src="images/slider/governor.jpg" class="normal"
                         alt="Hounarable governor of kerala will be Inaugurating TENCON 2019" style="display: none;">
                     <img src="images/slider/governor-mob.jpg" class="mobile" alt="" style="display: none;">
-                   <br> <div class="carousel-caption">
+                    <br>
+                    <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
                                 <div class="content text-center">
                                     <div class="main-banner-content-two">
-                                            <!-- <a class="theme-btn btn-style-one" href="inaugural-program.html">View Inaugural Program Schedule</a> -->
-                                        </div>
+                                        <!-- <a class="theme-btn btn-style-one" href="inaugural-program.html">View Inaugural Program Schedule</a> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -433,7 +434,8 @@
                                 <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks" style="height: 65px;">
                             </div>
                             <div class="col-md-4" style="padding-top:32px;">
-                                <img class="sponser-logo" src="images/logo-3.png" alt="IEEE SA" style="max-width: 250px;">
+                                <img class="sponser-logo" src="images/logo-3.png" alt="IEEE SA"
+                                    style="max-width: 250px;">
                             </div>
                             <div class="col-md-4" style="padding-top:32px;">
                                 <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 80px;">
@@ -473,10 +475,9 @@
                                 <img class="sponser-logo" src="./images/tpl.jpg" alt="tpl" style="height: 30px;">
                             </div>
                             <div class="col-md-4" style="padding-top:35px;">
-                                <img class="sponser-logo" src="./images/cisco.png" alt="CISCO"
-                                    style="height: 70px;">
+                                <img class="sponser-logo" src="./images/cisco.png" alt="CISCO" style="height: 70px;">
                             </div>
-                            
+
                             <div class="col-md-4" style="padding-top:35px;">
                                 <img class="sponser-logo" src="./images/oracle.png" alt="oracle" style="height: 80px;">
                             </div>
@@ -494,7 +495,7 @@
                             <div class="col-md-3" style="padding-top:35px;">
                                 <img class="sponser-logo" src="./images/csl.jpg" alt="CSL" style="height: 80px;">
                             </div>
-                            
+
                         </div>
                         <br>
                         <hr>
@@ -573,8 +574,10 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                         <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
-                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link" style="font-weight: initial;">Research
+                        <a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom
+                            CEC</a>&nbsp;&&nbsp;
+                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
+                            style="font-weight: initial;">Research
                             Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
