--- a/informations.html
+++ b/informations.html
@@ -167,7 +167,7 @@
                                     </ul>
                                 </li>
 
-
+                                <li><a href="gallery.html">Gallery</a></li>
                                 <li ><a href="contact.html">Contact Us</a>
 
                                 </li>
