--- a/itrack.html
+++ b/itrack.html
@@ -190,7 +190,7 @@
                   </li>
 
                   <li><a href="reg.html">Registration</a></li>
-
+                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -357,12 +357,12 @@
               tr:nth-child(odd) {
                 background-color: #fff;
               }
-              .schedule td:nth-child(1){
+
+              .schedule td:nth-child(1) {
                 background: #822468;
-                border:1px solid #986088;
+                border: 1px solid #986088;
                 color: white;
               }
-
             </style>
 
             <table class="schedule">
