--- a/itrack09-09.html
+++ b/itrack09-09.html
@@ -109,7 +109,7 @@ line-height: 195%;
 </ul>
 </li>
 <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+<li><a href="gallery.html">Gallery</a></li>
 <li class="dropdown"> <a href="itrack.html">Industry Track</a></li>
 <li><a href="reg.html">Registration</a></li>
 
