--- a/itrack25-09.html
+++ b/itrack25-09.html
@@ -116,6 +116,7 @@ line-height: 195%;
 <li><a href="htrack.html">Humanitarian Activities Track</a></li>
 </ul>
 </li>
+<li><a href="gallery.html">Gallery</a></li>
 <li><a href="reg.html">Registration</a></li>
 
 <li><a href="contact.html">Contact Us</a></li>
