--- a/jijo.html
+++ b/jijo.html
@@ -34,26 +34,24 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
  </head>
-<style>
- .speaker {
-    border: #822468 solid 2px;
-    box-shadow: #ffda15 3px 3px;
-    padding: 20px;
-}
+ <style>
+     .speaker {
+         border: #822468 solid 2px;
+         box-shadow: #ffda15 3px 3px;
+         padding: 20px;
+     }
 
-.speaker-name {
-    font-size: 2em;
-    font-weight: 600;
-    color: #822468;
-}
+     .speaker-name {
+         font-size: 2em;
+         font-weight: 600;
+         color: #822468;
+     }
 
-.speaker-designation {
-    font-style: italic;
-    font-weight: 500;
-}
-
-
-</style>
+     .speaker-designation {
+         font-style: italic;
+         font-weight: 500;
+     }
+ </style>
 
  <body>
      <div class="page-wrapper">
@@ -128,7 +126,7 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                     <a><a href="gallery.html">Gallery</a></a>
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -234,41 +232,44 @@
                      <h2>Speaker</h2><br>
                      <span class="left">
                          <div style="float:left;">
-                             <img  class="speaker" src="./images/jijo.png" alt="Jijo G John" style="width:200px;margin-right:15px;">
+                             <img class="speaker" src="./images/jijo.png" alt="Jijo G John"
+                                 style="width:200px;margin-right:15px;">
                          </div>
                      </span>
-                     <span class="speaker-name"> <p><br><br><br>Jijo G John<br></p></span>
-                     <span class="speaker-designation">  Phone: 8129-100-900</span>
+                     <span class="speaker-name">
+                         <p><br><br><br>Jijo G John<br></p>
+                     </span>
+                     <span class="speaker-designation"> Phone: 8129-100-900</span>
+                     <br>
+                     <span class="speaker-designation">Owner/CEO, Calpine Group<br><br></span>
+
+                     <p align="justify">Jijo is the CEO of Calpine Group consisting of companies UVJ Technologies,
+                         Calpine Solutions and Realistic Solutions. Calpine is one of the first companies started
+                         inside Infopark, Kochi during the year 2003. With over 300 employees at multiple locations
+                         in Kochi as well as offices in Sunnyvale, California and Melbourne, Australia, Calpine
+                         specializes in the domain of Life Sciences. The company is into delivering hardware and
+                         software products to Pharma companies for doing Research and Development of new medicines.
+                         Latest work is expanded into BioInformatics domain doing research in Genomics. Before
+                         starting Calpine, Jijo used to work in Silicon Valley, California for companies like
+                         Hewlett Packard, Agilent Technologies, Caliper Life Sciences.
                          <br>
-                         <span class="speaker-designation">Owner/CEO, Calpine Group<br><br></span>
-
-                         <p align="justify">Jijo is the CEO of Calpine Group consisting of companies UVJ Technologies,
-                             Calpine Solutions and Realistic Solutions. Calpine is one of the first companies started
-                             inside Infopark, Kochi during the year 2003. With over 300 employees at multiple locations
-                             in Kochi as well as offices in Sunnyvale, California and Melbourne, Australia, Calpine
-                             specializes in the domain of Life Sciences. The company is into delivering hardware and
-                             software products to Pharma companies for doing Research and Development of new medicines.
-                             Latest work is expanded into BioInformatics domain doing research in Genomics. Before
-                             starting Calpine, Jijo used to work in Silicon Valley, California for companies like
-                             Hewlett Packard, Agilent Technologies, Caliper Life Sciences.
-                             <br>
-                             Jijo has also started two product development companies in Kochi; FlyBuilds and Calpine
-                             Labs. Calpine Labs houses an innovation center for Research and Development in areas like
-                             Artificial Intelligence, IoT and Healthcare Hardware & Software development.
-                             <br>
-                             <b>Education:</b> B-Tech Computer Engineering from NIT Calicut and MBA from IIM Kozhikode.
-                             <br>
-                             <b>Awards:</b> Jijo has won the Distinguished NIT Alumnus award from NIT Calicut. Calpine
-                             has won several awards for Corporate Social Responsibility winning the PMI, KMA and Rotary
-                             CSR Awards. <br>
-
-                             <b>Interests:</b> Research in Life Sciences and Healthcare, Artificial Intelligence,
-                             Business and Marketing, Golf, Farming, Social Activities
-
-                         </p>
-
-
+                         Jijo has also started two product development companies in Kochi; FlyBuilds and Calpine
+                         Labs. Calpine Labs houses an innovation center for Research and Development in areas like
+                         Artificial Intelligence, IoT and Healthcare Hardware & Software development.
                          <br>
+                         <b>Education:</b> B-Tech Computer Engineering from NIT Calicut and MBA from IIM Kozhikode.
+                         <br>
+                         <b>Awards:</b> Jijo has won the Distinguished NIT Alumnus award from NIT Calicut. Calpine
+                         has won several awards for Corporate Social Responsibility winning the PMI, KMA and Rotary
+                         CSR Awards. <br>
+
+                         <b>Interests:</b> Research in Life Sciences and Healthcare, Artificial Intelligence,
+                         Business and Marketing, Golf, Farming, Social Activities
+
+                     </p>
+
+
+                     <br>
 
 
 
