--- a/presentation_guidelines.html
+++ b/presentation_guidelines.html
@@ -185,7 +185,7 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                     <a><a href="gallery.html">Gallery</a></a>
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
