--- a/reg.html
+++ b/reg.html
@@ -189,7 +189,7 @@
                                         </ul>
                                     </li>
                                     <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li class="dropdown"><a href="#">Special Tracks</a>
                                         <ul>
                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -228,7 +228,7 @@
             li.tab-btn.active-btn {
                 border: 1px solid #802769;
                 background: #802769;
-                color: white!important;
+                color: white !important;
             }
 
             tr:nth-child(even) {
