--- a/speakers.html
+++ b/speakers.html
@@ -4,14 +4,17 @@
  <head>
      <meta charset="utf-8">
      <title>TENCON 2019 | Speakers </title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+     <script>
+         window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+         function gtag() {
+             dataLayer.push(arguments);
+         }
+         gtag('js', new Date());
+
+         gtag('config', 'UA-39379599-10');
+     </script>
 
      <!-- Stylesheets -->
      <link href="css/bootstrap.css" rel="stylesheet">
@@ -125,7 +128,7 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                     <a><a href="gallery.html">Gallery</a></a>
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -276,14 +279,17 @@
                              Program. Tony is an active a mentor and investor in the startup ecosystem, as Board member
                              in Corporates, an advisor and mentor to multiple Governments on IT, Start-up and Innovation
                              policies.</p><br>
-                             <h3>Title: Sustainability with Digital Transformation</h3>
+                         <h3>Title: Sustainability with Digital Transformation</h3>
 
 
-                            <p align="justify"><b>Abstract:</b> With the vision of Zero Emission and Zero Fatality, Tony will share Nissan’s commitment to innovation for building a better future for the car buyers where cars are their partners, and drivers feel more confident and more connected.
- 
-                                How digital transformation at Nissan is contributing majorly by converting these innovations and future technologies into a reality.
-                                
-                            </p>
+                         <p align="justify"><b>Abstract:</b> With the vision of Zero Emission and Zero Fatality, Tony
+                             will share Nissan’s commitment to innovation for building a better future for the car
+                             buyers where cars are their partners, and drivers feel more confident and more connected.
+
+                             How digital transformation at Nissan is contributing majorly by converting these
+                             innovations and future technologies into a reality.
+
+                         </p>
                          <br>
                          <hr>
                          <br>
@@ -627,11 +633,17 @@
 
 
                                              <p align="justify"><b>Abstract:</b>
-                                                The future of mobility will clearly be more sustainable and more connected.<br>
-                                                Being at the forefront of the EV, Connected Cars & Autonomous Vehicle Technology, Nissan is poised to play a key role in shaping up the future of Mobility.
+                                                 The future of mobility will clearly be more sustainable and more
+                                                 connected.<br>
+                                                 Being at the forefront of the EV, Connected Cars & Autonomous Vehicle
+                                                 Technology, Nissan is poised to play a key role in shaping up the
+                                                 future of Mobility.
                                                  <br>
-                                                Working on its roadmap- ‘Nissan Intelligent Mobility’, Bruno’s session will share how as a responsible car manufacturer Nissan is committed to making transportation safer, smarter, more enjoyable and more connected for a better future of the society.
-                                                </p>
+                                                 Working on its roadmap- ‘Nissan Intelligent Mobility’, Bruno’s session
+                                                 will share how as a responsible car manufacturer Nissan is committed to
+                                                 making transportation safer, smarter, more enjoyable and more connected
+                                                 for a better future of the society.
+                                             </p>
                                              <br><br>
 
 
@@ -656,7 +668,8 @@
                  <div class="row">
                      <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                          <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                         <a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom
+                             CEC</a>&nbsp;&&nbsp;
                          <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                              style="font-weight: initial;">Research Publishing Services</a>
                      </div><!-- /.col-md-4 -->
