--- a/committee.html
+++ b/committee.html
@@ -172,7 +172,7 @@
 
                                     </li>
                                     <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li class="dropdown"><a href="#">Special Tracks</a>
                                         <ul>
                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -500,10 +500,10 @@
                                 </li>
 
                                 <div class="row">
-                                        <li>
-                                                <b>Industry Track Chairs</b> </li>
+                                    <li>
+                                        <b>Industry Track Chairs</b> </li>
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 flex-parent">
-                                        
+
 
                                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 flex-child">
 
