--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>TENCON 2019 | Contact US </title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-39379599-10');
+    </script>
 
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -106,7 +109,7 @@
                                         </ul>
                                     </li>
                                     <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                    <li><a href="gallery.html">Gallery</a></li>
                                     <li class="dropdown"><a href="#">Special Tracks</a>
                                         <ul>
                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -243,7 +246,8 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                             <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                            <a class="expert-link" href="https://cecieee.org/devcom-walk-through/"
+                                target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
                             <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                                 style="font-weight: initial;">Research Publishing Services</a>
                         </div><!-- /.col-md-4 -->
