--- a/kerala.html
+++ b/kerala.html
@@ -4,14 +4,17 @@
  <head>
      <meta charset="utf-8">
      <title>TENCON 2019 | Kerala</title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+     <script>
+         window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+         function gtag() {
+             dataLayer.push(arguments);
+         }
+         gtag('js', new Date());
+
+         gtag('config', 'UA-39379599-10');
+     </script>
 
      <!-- Stylesheets -->
      <link href="css/bootstrap.css" rel="stylesheet">
@@ -121,7 +124,7 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                     <a><a href="gallery.html">Gallery</a></a>
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -165,7 +168,8 @@
 
                              <div class="navbar-collapse collapse clearfix">
                                  <ul class="navigation clearfix">
-                                     <li><a href="index.html">Home</a></li> <!--##-->
+                                     <li><a href="index.html">Home</a></li>
+                                     <!--##-->
                                      <li class="current dropdown"><a href="about.html">About</a>
                                          <ul>
                                              <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -385,7 +389,8 @@
                                      src="https://www.keralatourism.org/images/festivals/large/20170330115924_321_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
-                         <p style="text-align:center;"><a target="_blank" class="theme-btn btn-style-one" href="https://www.keralatourism.org/">Find out more about Kerala Tourism</a></p>
+                         <p style="text-align:center;"><a target="_blank" class="theme-btn btn-style-one"
+                                 href="https://www.keralatourism.org/">Find out more about Kerala Tourism</a></p>
                      </div>
                  </div>
              </div>
@@ -403,7 +408,8 @@
                      <div class="row">
                          <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                              <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                             <a class="expert-link" href="https://cecieee.org/devcom-walk-through/"
+                                 target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
                              <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                                  style="font-weight: initial;">Research
                                  Publishing Services</a>
