--- a/tutorials.html
+++ b/tutorials.html
@@ -100,7 +100,7 @@
 </ul>
 </li>
 <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+<li><a href="gallery.html">Gallery</a></li>
 <li class="dropdown"><a href="#">Special Tracks</a>
 <ul>
 <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
