--- a/visa.html
+++ b/visa.html
@@ -4,14 +4,17 @@
  <head>
      <meta charset="utf-8">
      <title>TENCON 2019 | Kerala - Visa </title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+     <script>
+         window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+         function gtag() {
+             dataLayer.push(arguments);
+         }
+         gtag('js', new Date());
+
+         gtag('config', 'UA-39379599-10');
+     </script>
 
      <!-- Stylesheets -->
      <link href="css/bootstrap.css" rel="stylesheet">
@@ -152,7 +155,7 @@
                                          </ul>
                                      </li>
                                      <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
-
+                                     <a><a href="gallery.html">Gallery</a></a>
                                      <li class="dropdown"><a href="#">Special Tracks</a>
                                          <ul>
                                              <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -196,7 +199,8 @@
 
                              <div class="navbar-collapse collapse clearfix">
                                  <ul class="navigation clearfix">
-                                     <li><a href="index.html">Home</a></li> <!--##-->
+                                     <li><a href="index.html">Home</a></li>
+                                     <!--##-->
                                      <li class="current dropdown"><a href="about.html">About</a>
                                          <ul>
                                              <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -418,7 +422,8 @@
                  <div class="row">
                      <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                          <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                         <a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom
+                             CEC</a>&nbsp;&&nbsp;
                          <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                              style="font-weight: initial;">Research Publishing Services</a>
                      </div><!-- /.col-md-4 -->
