--- a/gallery.html
+++ b/gallery.html
@@ -230,30 +230,37 @@
 
         <section>
             <div class="main-gallery">
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
-                <a href="images/avatar.png" data-lightbox="gallery"><img src="images/avatar.png"></a>
+                <a href="gallery/1.JPG" data-lightbox="gallery"><img src="gallery/1.JPG"></a>
+                <a href="gallery/2.JPG" data-lightbox="gallery"><img src="gallery/2.JPG"></a>
+                <a href="gallery/3.JPG" data-lightbox="gallery"><img src="gallery/3.JPG"></a>
+                <a href="gallery/4.JPG" data-lightbox="gallery"><img src="gallery/4.JPG"></a>
+                <a href="gallery/5.JPG" data-lightbox="gallery"><img src="gallery/5.JPG"></a>
+                <a href="gallery/6.JPG" data-lightbox="gallery"><img src="gallery/6.JPG"></a>
+                <a href="gallery/7.JPG" data-lightbox="gallery"><img src="gallery/7.JPG"></a>
+                <a href="gallery/8.JPG" data-lightbox="gallery"><img src="gallery/8.JPG"></a>
+                <a href="gallery/9.JPG" data-lightbox="gallery"><img src="gallery/9.JPG"></a>
+                <a href="gallery/10.JPG" data-lightbox="gallery"><img src="gallery/10.JPG"></a>
+                <a href="gallery/11.JPG" data-lightbox="gallery"><img src="gallery/11.JPG"></a>
+                <a href="gallery/12.JPG" data-lightbox="gallery"><img src="gallery/12.JPG"></a>
+                <a href="gallery/13.JPG" data-lightbox="gallery"><img src="gallery/13.JPG"></a>
+                <a href="gallery/14.JPG" data-lightbox="gallery"><img src="gallery/14.JPG"></a>
+                <a href="gallery/15.JPG" data-lightbox="gallery"><img src="gallery/15.JPG"></a>
+                <a href="gallery/16.JPG" data-lightbox="gallery"><img src="gallery/16.JPG"></a>
+                <a href="gallery/17.JPG" data-lightbox="gallery"><img src="gallery/17.JPG"></a>
+                <a href="gallery/18.JPG" data-lightbox="gallery"><img src="gallery/18.JPG"></a>
+                <a href="gallery/19.JPG" data-lightbox="gallery"><img src="gallery/19.JPG"></a>
+                <a href="gallery/20.JPG" data-lightbox="gallery"><img src="gallery/20.JPG"></a>
+                <a href="gallery/21.JPG" data-lightbox="gallery"><img src="gallery/21.JPG"></a>
+                <a href="gallery/22.JPG" data-lightbox="gallery"><img src="gallery/22.JPG"></a>
+                <a href="gallery/23.JPG" data-lightbox="gallery"><img src="gallery/23.JPG"></a>
+                <a href="gallery24.JPG" data-lightbox="gallery"><img src="gallery/24.JPG"></a>
+                <a href="gallery/25.JPG" data-lightbox="gallery"><img src="gallery/25.JPG"></a>
+                <a href="gallery/26.JPG" data-lightbox="gallery"><img src="gallery/26.JPG"></a>
+                <a href="gallery/27.JPG" data-lightbox="gallery"><img src="gallery/27.JPG"></a>
+                <a href="gallery/28.JPG" data-lightbox="gallery"><img src="gallery/28.JPG"></a>
+                <a href="gallery/30.JPG" data-lightbox="gallery"><img src="gallery/29.JPG"></a>
+                <a href="gallery/31.JPG" data-lightbox="gallery"><img src="gallery/30.JPG"></a>
+                <a href="gallery/32.JPG" data-lightbox="gallery"><img src="gallery/31.JPG"></a>
             </div>
 
         </section>
